plugins {
    id 'java'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sprint.mission'
version = 'v1.2-M8'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // spring
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation("org.springframework.boot:spring-boot-starter-security")

    // s3
    implementation 'software.amazon.awssdk:s3:2.31.7'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.testcontainers:localstack:1.20.6'
    testImplementation("org.springframework.security:spring-security-test")
    testImplementation 'com.h2database:h2'

    // db
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
}

test {
    useJUnitPlatform()
}

checkstyle {
    toolVersion = '1.0' // Checkstyle 버전
    configFile = rootProject.file('checkstyle.xml') // Checkstyle 설정 파일 경로
}